[package]
name = "kernel"
version = "0.1.0"
authors = ["trashbyte <github@trashbyte.io>"]
edition = "2018"

[dependencies]
#kernel-utils = { path = "../kernel-utils" }
tinypci = { git = "https://github.com/trashbyte/tinypci.git", default-features = false }

#pest = { version = "2.1.3", default-features = false }
#pest_derive = { version = "2.1.0", default-features = false }

bootloader = { version = "0.9.8", features = ["map_physical_memory"]}
volatile = "0.2.7"
spin = { version = "0.9.2", features = ["spin_mutex"] }
x86 = "0.43.0"
x86_64 = "0.14.6"
uart_16550 = "0.2.15"
pic8259 = "0.10.1"
x2apic = "0.4.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"
acpi_crate = { package = "acpi", version = "4.1.0" }
aml = "0.16.0"
raw-cpuid = "10.2.0"
hashbrown = { version = "0.11.2", default-features = false }
conquer-once = { version = "0.3.2", default-features = false }
#crypto_hashes
#goblin = "0.2.0"

[dependencies.chrono]
version = "0.4.19"
default-features = false

[dependencies.num]
version = "0.4.0"
default-features = false

[dependencies.num-derive]
version = "0.3.3"
default-features = false

[dependencies.num-traits]
version = "0.2.14"
default-features = false
features = ["libm"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootloader]
physical-memory-offset = "0x100000000000"
kernel-stack-address   = "0xFFFF00000000"
# The size of the kernel stack, given in number of 4KiB pages.
kernel-stack-size = 512

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-smp", "4",
    "-m", "512M",
    "-drive", "format=raw,file={}",
    #"-drive", "file=hdb.img,if=none,format=raw,id=vdisk",
    #"-device", "ahci,id=ahci",
    #"-device", "ide-hd,bus=ahci.0,drive=vdisk",
    #"-fda", "fda.img",
    "-serial", "stdio"
]
run-args = [
    "-drive", "format=raw,file=hdb.img"
]
test-args = [
    "-drive", "format=raw,file=..\\hdb.img"
    #"-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    #"-display", "none"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30 # (in seconds)

[[test]]
name = "stack_overflow"
harness = false
