[package]
name = "main"
version = "0.0.1"
authors = ["trashbyte <github@trashbyte.io>"]
edition = "2018"

[dependencies]
kernel = { path = "../kernel" }

spin = { version = "0.9.2", features = ["spin_mutex"] }
chrono = { version = "0.4.19", default-features = false }
#pest = { version = "2.1.3", default-features = false }
#pest_derive = { version = "2.1.0", default-features = false }
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.6"
bootloader = { version = "0.9.8", features = ["map_physical_memory"] }

[package.metadata.bootloader]
physical-memory-offset = "0x100000000000"
kernel-stack-address   = "0xFFFF00000000"
# The size of the kernel stack, given in number of 4KiB pages.
kernel-stack-size = 512

[package.metadata.bootimage]
run-command = [
    "qemu-system-x86_64",
    "-smp", "4",
    "-m", "512M",
    "-drive", "format=raw,file={}",
    "-device", "ahci,id=ahci",
    "-device", "ide-hd,bus=ahci.0,drive=vdisk",
    "-serial", "stdio"
]
run-args = [
    "-drive", "file=hdb.img,if=none,format=raw,id=vdisk",
    "-fda", "fda.img",
]
test-args = [
    "-drive", "file=..\\hdb.img,if=none,format=raw,id=vdisk",
    "-fda", "..\\fda.img",
    "-display", "none",
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"
]
test-success-exit-code = 33 # (0x10 << 1) | 1
test-timeout = 30 # (in seconds)